# hy-models

./: .gitignore  README.md  configuration.py  ddp.py  ddp2.py  modeling.py  modeling2.py  modeling_ar.py  modeling_art.py  modeling_autoedit.py  modeling_components.py  modeling_ed.py  monitor.py  noise_gen.py  num_patterns.json  ortho_patterns.py  preproc.py  pyproject.toml  replacements.json  training.py  translate.py  translate_simple.py  utils.py
hy_models/: __init__.py  attention.py  configuration.py  modeling_art.py  modeling_autoedit.py  modeling_components.py
noise_gen/: char2id.json  char_probas.npy
tests/: test_attention.py  test_models.py
