[project]
name = "hy-models"
version = "0.1.0"
description = "A Python module for transformer-based models"
authors = [
    { name = "Mkrtich Minasyan", email = "mkrtichm@outlook.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.0.0"
]
keywords = ["transformers", "machine learning", "nlp", "pytorch"]

[project.urls]
Homepage = "https://github.com/MMinasyan/hy-models"
Repository = "https://github.com/MMinasyan/hy-models.git"
Issues = "https://github.com/MMinasyan/hy-models/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hy_models"]